Creative Bakery landing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,25 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/mixins";
+@import "./utils/vars";
+@import "./blocks/about-us";
+@import "./blocks/container";
+@import "./blocks/footer";
+@import "./blocks/gallary";
+@import "./blocks/header";
+@import "./blocks/nav";
+@import "./blocks/product-type";
+@import "./blocks/products";
 
-body {
-  background: $c-gray;
+.page {
+  margin: 0 auto;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  color: $color-general;
+  background-color: $color-background;
+
+  scroll-behavior: smooth;
+
+  &__body {
+    margin: 0 auto;
+  }
 }
